src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__plan_implementation_popup.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

› 1. Yes, implement this plan      Switch to programmer and track this plan as
                                   a /goal until complete.
  2. No, stay in planner identity  Continue planning with the model.

  Press enter to confirm or esc to go back
