src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__plan_implementation_popup_with_unfinished_goal.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: popup
---
  Implement this plan?

› 1. Yes, implement this plan (disabled)            Switch to programmer and
                                                    track this plan as a /goal
                                                    until complete. (disabled:
                                                    Clear the current active /
                                                    goal before implementing
                                                    this plan.)
  2. Clear unfinished goal and implement this plan  Clear the current /goal,
                                                    switch to programmer, and
                                                    track this plan until
                                                    complete.
  3. No, stay in planner identity                   Continue planning with the
                                                    model.

  Press enter to confirm or esc to go back
