src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---










• Working (0s • esc to interrupt)

  ↳ Queued while /review is running.
    ⌥ + ↑ edit

› Ask LHA to do anything

  gpt-5.3-codex · 100% left · ~/Workspace/lha/src/tui/app
