src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__unified_exec_empty_then_non_empty_after.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: combined
---
↳ Interacted with background terminal · just fix
  └ (waited)

↳ Interacted with background terminal · just fix
  └ ls
