src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: active_combined
---
↳ Interacted with background terminal · just fix
  └ pwd
