src/agent/cli/product/tui_app/src/chatwidget/snapshots/lha_cli__product__tui_app__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: src/agent/cli/src/../product/tui_app/src/chatwidget/tests.rs
expression: combined
---
↳ Interacted with background terminal · cargo test -p lha-agent
  └ (waited)

• Final response.
